# user_guide

./: .gitignore  README.md  index2.html  justfile  mkdocs.yml  pyproject.toml
about/: index.html
coding/: index.html
coding_map/: index.html
create_project/: index.html
docs/: 404.html  index.html
docs/about/: index.html
docs/analysis/: index.html
docs/citation/: index.html
docs/coding/: index.html
docs/coding_map/: index.html
docs/community/: index.html
docs/create_project/: index.html
docs/export_events/: index.html
docs/images/: select_behavior_type.png~
docs/install/: index.html
docs/legal/: index.html
docs/managing_observations/: index.html
docs/observations/: index.html
docs/observations_list/: index.html
docs/playback_menu/: index.html
docs/plot/: index.html
docs/plugins/: index.html
docs/preferences/: index.html
docs/search/: search_index.json
docs/start/: index.html
docs/tools/: index.html
docs/various/: index.html
legal/: index.html
observations_list/: index.html
playback_menu/: index.html
plot/: index.html
preferences/: index.html
src/: about.md  analysis.md  citation.md  coding.md  community.md  create_project.md  export_events.md  index.md  install.md  managing_observations.md  observations.md  observations_list.md  playback_menu.md  plot.md  plugins.md  preferences.md  start.md  tools.md  various.md
