[project]
name = "user-guide"
version = "9.5"
description = "BORIS user guide"
authors = [
    { name = "Olivier Friard", email = "olivier.friard@unito.it" }
]
dependencies = [
    "mkdocs-material>=9.5.15",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-glightbox>=0.3.7",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-with-pdf>=0.9.3",
    "pydyf==0.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
